famous last words... fixes a silly safari z-index bloop

--- a/styles/items.css
+++ b/styles/items.css
@@ -42,6 +42,8 @@ li>img {
     width: 400px;
     outline: white solid 2px;
     outline-offset: -10px;
+    position: relative;
+    z-index:-1;
 }
 
 .page-title {
